Criando pagina igual NetFlix

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./stylee/main.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>NETFLIX</title>
 </head>
 <body>
+    <main class="main">
+    <div class="main-child">
+        <span>Assista onde quiser. Cancele quando quiser.</span>
+        <h1> Filmes, séries e muito mais. Sem limites.</h1>
+        <p>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
+    </div>
+        <div class="gradient"></div>
+    </main>
+
     <header>
         <div class="container">
             <h2 class="logo">NETFLIX</h2>
