--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <title>NETFLIX</title>
 </head>
 <body>
+    <header class="header">
+        <img src="img/netflix.svg" alt="NetFlix" droggable="false">
+        <a href="#"> Entrar </a>
+    </header>
     <main class="main">
     <div class="main-child">
-        <span>Assista onde quiser. Cancele quando quiser.</span>
         <h1> Filmes, séries e muito mais. Sem limites.</h1>
+                <span>Assista onde quiser. Cancele quando quiser.</span>
+                <form class="form-cta">
+                    <input type="text" name="" placeholder="Email">
+                    <button>
+                        Vamos lá
+                    </button>
+                </form>
         <p>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
     </div>
         <div class="gradient"></div>
