--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,47 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>NETFLIX</title>
 </head>
+
 <body>
     <header class="header">
         <img src="img/netflix.svg" alt="NetFlix" droggable="false">
         <a href="#"> Entrar </a>
     </header>
     <main class="main">
-    <div class="main-child">
-        <h1> Filmes, séries e muito mais. Sem limites.</h1>
-                <span>Assista onde quiser. Cancele quando quiser.</span>
-                <form class="form-cta">
-                    <input type="text" name="" placeholder="Email">
-                    <button>
-                        Vamos lá
-                    </button>
-                </form>
-        <p>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
-    </div>
-        <div class="gradient"></div>
+        <div class="main-child">
+            <h1> Filmes, séries e muito mais. Sem limites.</h1>
+            <span>Assista onde quiser. Cancele quando quiser.</span>
+            <form class="form-cta">
+                <input type="text" name="" placeholder="Email">
+                <button>
+                    Vamos lá
+                </button>
+            </form>
+            <p>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
+        </div>
+        <div class="img-tv">
+            <div class="gradient"></div>
     </main>
+    <section class="section">
+        <div class="container">
+            <div class="grid">
+                <div>
+                    <h1> Aproveite na TV.</h1>
+                    <p> em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV, aparelhos de Blu-ray e outros
+                        dispositivos.
+                    </p>
+                </div>
+                <div class="img-tv">
+                    <img src="img/tv.png" alt="Tv">
+                    <video class="video-tv" autoplay playsinline muted loop>
+                        <source
+                            src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-0819.m4v">
+                    </video>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
 </body>
+
 </html>
